--- a/content/about-pages/frequently-asked-questions.mdx
+++ b/content/about-pages/frequently-asked-questions.mdx
@@ -3,27 +3,47 @@ title: Frequently Asked Questions
 ord: 5
 menu: FAQ
 ---
-Welcome to the FAQ section of the SSH Open Marketplace. Here you can find the most asked questions and their answers. This page will be updated regularly to address the most frequently asked questions.  
 
+Welcome to the FAQ section of the SSH Open Marketplace. Here you can find the
+most asked questions and their answers. This page will be updated regularly to
+address the most frequently asked questions.
 
-* **How can I contribute to the SSH Open Marketplace?**
+- **How can I contribute to the SSH Open Marketplace?**
 
-The SSH Open Marketplace is a collaborative service, to which any user can contribute, creating new entries in the catalogue or enriching existing ones. You can also let us know what you would like to add or report a bug using the Report an issue function which is available on each page. All the ways to contribute are explained in [this dedicated section of the website](/contribute/overview).   
+The SSH Open Marketplace is a collaborative service, to which any user can
+contribute, creating new entries in the catalogue or enriching existing ones.
+You can also let us know what you would like to add or report a bug using the
+Report an issue function which is available on each page. All the ways to
+contribute are explained in
+[this dedicated section of the website](/contribute/overview).
 
-* **Why do you promote commercial software?**
+- **Why do you promote commercial software?**
 
-The SSH Open Marketplace promotes any tools and services used by the SSH research communities. Our goal is to encourage the uptake of open methods, but we choose to also showcase the reality of existing research practices and this includes commercial software. We are not affiliated to or receiving any revenues from the commercial software referenced in this website.
+The SSH Open Marketplace promotes any tools and services used by the SSH
+research communities. Our goal is to encourage the uptake of open methods, but
+we choose to also showcase the reality of existing research practices and this
+includes commercial software. We are not affiliated to or receiving any revenues
+from the commercial software referenced in this website.
 
-* **Is the SSH Open Marketplace multilingual?**
+- **Is the SSH Open Marketplace multilingual?**
 
-For the sake of simplicity the SSH Open Marketplace comes (for the moment) with an English user interface. Furthermore, the majority of the records are in English. However, the service encourages the addition of records in other European languages. 
+For the sake of simplicity the SSH Open Marketplace comes (for the moment) with
+an English user interface. Furthermore, the majority of the records are in
+English. However, the service encourages the addition of records in other
+European languages.
 
-* **As a researcher in Social Sciences and Humanities, why should I contribute to the SSH Open Marketplace?**
+- **As a researcher in Social Sciences and Humanities, why should I contribute
+  to the SSH Open Marketplace?**
 
-Because this is an opportunity to promote your own work - by adding the tools or training materials you’ve created as items in the Marketplace -  or to support the uptake of the tools you use in your work on a daily basis - by creating or enriching the records of the resources you are familiar with.
+Because this is an opportunity to promote your own work - by adding the tools or
+training materials you've created as items in the Marketplace - or to support
+the uptake of the tools you use in your work on a daily basis - by creating or
+enriching the records of the resources you are familiar with.
 
-* **Can I upload data to the SSH Open Marketplace?**
+- **Can I upload data to the SSH Open Marketplace?**
 
-As a simple answer: no. The SSH Open Marketplace is a discovery portal for  tools & services, training materials, datasets, publications and workflows, not a research data repository. To find suitable research data repositories for your research data we advise that you consult established services like [re3data](https://www.re3data.org/). 
-
-
+As a simple answer: no. The SSH Open Marketplace is a discovery portal for tools
+& services, training materials, datasets, publications and workflows, not a
+research data repository. To find suitable research data repositories for your
+research data we advise that you consult established services like
+[re3data](https://www.re3data.org/).
