--- a/content/about-pages/team.mdx
+++ b/content/about-pages/team.mdx
@@ -4,8 +4,10 @@ ord: 4
 menu: About the team
 ---
 
-The day-to-day operations of the SSH Open Marketplace are ensured by the **Editorial Team**. During the development phase of the portal, SSHOC members act as a proto-Editorial Team but a new and stable team will be set up before the end of April 2022.
-
+The day-to-day operations of the SSH Open Marketplace are ensured by the
+**Editorial Team**. During the development phase of the portal, SSHOC members
+act as a proto-Editorial Team but a new and stable team will be set up before
+the end of April 2022.
 
 The concept, design and development of the SSH Open Marketplace has been carried
 out by SSHOC WP7 members
@@ -19,8 +21,8 @@ out by SSHOC WP7 members
   Justyna Wytrążek, Ola Nowak, Eliza Kalata
 - **[OEAW](https://www.oeaw.ac.at/acdh/)**: Matej Ďurčo, Stefan Probst, Klaus
   Illmayer, Seung-Bin Yim, Martin Kirnbauer
-- **[UGOE](https://www.sub.uni-goettingen.de/sub-aktuell/)**: Stefan Buddenbohm, Joseph Dung, Alireza
-  Zarei
+- **[UGOE](https://www.sub.uni-goettingen.de/sub-aktuell/)**: Stefan Buddenbohm,
+  Joseph Dung, Alireza Zarei
 - **[TRUST-IT](https://www.trust-itservices.com/)**: Marieke Willems, Leonardo
   Marino, Tracey Biller, Filomena Minichiello, Stephanie Parker
 - **[SWC](https://semantic-web.com/)**: Martin Kaltenböck, Sotiris Karampatakis
@@ -31,6 +33,8 @@ out by SSHOC WP7 members
   Chryssoula Bekiari, Athina Kritsotaki
 
 and by our **community of testers**, and especially: Agnieszka Szulińska,
-Maurizio Toscano, Kasia Karpinska, Vanessa Hannesschläger, Simon Saldner, Judith Wehmeyer, Ami Saji, Genevieve Michaud, Irena Vipavc, Veronika Heider, Jakob Lenardic, Melina Jander...
+Maurizio Toscano, Kasia Karpinska, Vanessa Hannesschläger, Simon Saldner, Judith
+Wehmeyer, Ami Saji, Genevieve Michaud, Irena Vipavc, Veronika Heider, Jakob
+Lenardic, Melina Jander...
 
 Please use the [contact form](/contact) if you want to get in touch.
