--- a/content/contribute-pages/enrich-an-individual-item.mdx
+++ b/content/contribute-pages/enrich-an-individual-item.mdx
@@ -3,12 +3,24 @@ title: Enrich an individual item
 ord: 4
 menu: Enrich an individual item
 ---
-If you find an existing Marketplace entry that you wish to enhance or correct, you can do so via the edit forms. To access this, log in to your Marketplace account and go to the item you wish to correct. Above the entry, in blue, you will find an “Edit” button, which will open up a page where you can fill in the information.
 
-![Screenshot of the edit form - “3DHOP - How To” item](/assets/images/edit_training.png "Screenshot of the edit form - “3DHOP - How To” item")
+If you find an existing Marketplace entry that you wish to enhance or correct,
+you can do so via the edit forms. To access this, log in to your Marketplace
+account and go to the item you wish to correct. Above the entry, in blue, you
+will find an "Edit" button, which will open up a page where you can fill in the
+information.
 
-If you need some explanation or examples for some of the metadata fields, please consult the <“Guidance for metadata fields” table>. 
+![Screenshot of the edit form - "3DHOP - How To" item](/assets/images/edit_training.png "Screenshot of the edit form - '3DHOP - How To' item")
 
-You may save your edits as a draft, without making a final submission, by using the Save as Draft button. Once you have finished, click “Publish” and it will go to review for our moderation team. Via the “My account” dashboard, you can access your contributed and draft items. 
+If you need some explanation or examples for some of the metadata fields, please
+consult the <"Guidance for metadata fields" table>.
 
-We encourage members of our community to continue to update and enrich Marketplace entries, as digital tools, workflows, and datasets useful in social sciences and humanities are rapidly changing. We are relying on you to help us maintain this information as up to date as possible for the scholarly community. 
+You may save your edits as a draft, without making a final submission, by using
+the Save as Draft button. Once you have finished, click "Publish" and it will go
+to review for our moderation team. Via the "My account" dashboard, you can
+access your contributed and draft items.
+
+We encourage members of our community to continue to update and enrich
+Marketplace entries, as digital tools, workflows, and datasets useful in social
+sciences and humanities are rapidly changing. We are relying on you to help us
+maintain this information as up to date as possible for the scholarly community.
