--- a/content/about-pages/implementation.mdx
+++ b/content/about-pages/implementation.mdx
@@ -3,23 +3,33 @@ title: Technical aspects
 ord: 3
 menu: About the Technical aspects
 ---
+
 ## Data model
 
 The data model of the SSH Open Marketplace was designed to be generic and
-flexible enough to support a variety of sources. The data model v1.5 is presented in the [Marketplace – Implementation report](https://doi.org/10.5281/zenodo.5749464). 
+flexible enough to support a variety of sources. The data model v1.5 is
+presented in the
+[Marketplace – Implementation report](https://doi.org/10.5281/zenodo.5749464).
 
 ## Data ingestion workflow
 
 The SSH Open Marketplace provides a REST API at the backend where data can not
 only be read but also inserted or updated. This approach allows
-technology-agnostic ingestion. During the development phase, two main ingestion pipelines - covering the gathering of the data at the source (e.g. via an API or a Git repository), the mapping of the data to the SSH Open Marketplace data model including transformation of parts of the data (e.g. connecting terms from the source to a vocabulary like TaDiRAH) and the integration of the processed data into the SSH Open Marketplace via the API - were used: 
+technology-agnostic ingestion. During the development phase, two main ingestion
+pipelines - covering the gathering of the data at the source (e.g. via an API or
+a Git repository), the mapping of the data to the SSH Open Marketplace data
+model including transformation of parts of the data (e.g. connecting terms from
+the source to a vocabulary like TaDiRAH) and the integration of the processed
+data into the SSH Open Marketplace via the API - were used:
 
-* [PoolParty UnifiedViews](https://www.poolparty.biz/agile-data-integration) provided by [Semantic Web Company (SWC)](https://semantic-web.com/). 
-* [Data Aggregation and proCessing Engine (DACE)](https://gitlab.pcss.pl/dl-team/aggregation/dace) developed by the Poznan Supercomputing and Networking Center (PSNC)
+- [PoolParty UnifiedViews](https://www.poolparty.biz/agile-data-integration)
+  provided by [Semantic Web Company (SWC)](https://semantic-web.com/).
+- [Data Aggregation and proCessing Engine (DACE)](https://gitlab.pcss.pl/dl-team/aggregation/dace)
+  developed by the Poznan Supercomputing and Networking Center (PSNC)
 
 ![Data ingestion workflow](/assets/images/mp_ingest_workflow.png "Data ingestion workflow")
 
-*Illustration: Overview on the different components of the ingestion workflow*
+_Illustration: Overview on the different components of the ingestion workflow_
 
 ## Information about the development of the website
 
