--- a/content/contribute-pages/metadata-guidelines.mdx
+++ b/content/contribute-pages/metadata-guidelines.mdx
@@ -1,49 +1,56 @@
 ---
-title: "Metadata guidelines "
+title: Metadata guidelines
 ord: 7
-menu: "Metadata guidelines "
+menu: Metadata guidelines
 ---
-These guidelines include recommendations on metadata fields to be used while creating and/or reviewing an item entry in the SSH Open Marketplace. 
 
-The first subsection presents the fields that are mandatory and recommended depending on the type of items you want to create. A second section gives some explanations about the fields themselves - in case the title is not self-explanatory - how to fill in a field if you create an item and what you should check if you are a moderator.
+These guidelines include recommendations on metadata fields to be used while
+creating and/or reviewing an item entry in the SSH Open Marketplace.
+
+The first subsection presents the fields that are mandatory and recommended
+depending on the type of items you want to create. A second section gives some
+explanations about the fields themselves - in case the title is not
+self-explanatory - how to fill in a field if you create an item and what you
+should check if you are a moderator.
 
 ### Metadata status
-- **Mandatory** fields are clearly indicated in the edit forms and you won’t be able to submit an item if these fields are empty
-- **Recommended** fields are present by default in the forms, depending on the item types you want to create (i.e. if you want to create a publication, all the bibliographic metadata are included by default in the edit forms). 
-- **Optional** fields can be added via the edit forms. 
-- There are also **hidden** properties that are used by the moderation team in the process of curation, and these are only visible to moderators that have logged in.
+
+- **Mandatory** fields are clearly indicated in the edit forms and you won't be
+  able to submit an item if these fields are empty
+- **Recommended** fields are present by default in the forms, depending on the
+  item types you want to create (i.e. if you want to create a publication, all
+  the bibliographic metadata are included by default in the edit forms).
+- **Optional** fields can be added via the edit forms.
+- There are also **hidden** properties that are used by the moderation team in
+  the process of curation, and these are only visible to moderators that have
+  logged in.
 
 [RECOMMENDED TABLE]
 
-
 ### Guidance for metadata fields
 
-| Property Field’s name           | How to fill in? Some recommendations for contributors                                                                                                                                                                                                                                           | Quality checks: what and how moderators can validate content “Dashboard” = problematic items are automatically flagged and prioritised for curation within the editorial dashboard “Manually” = moderator has to assess coherence and relevance of the info |
-|---------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Accessible at = “Go to…” button | URL of the resource. Landing page of the resource which could be the persistent identifier. Ideally, only one URL should be added as accessibleAt. For other URLs, see “externalID”.                                                                                                            | Check that link is working (=> dashboard)                                                                                                                                                                                                                   |
-| Access Policy URL               | URL pointing to information about the access policy that applies to the Resource. Follows EOSC Portal Providers Documentation Related to `Authentication`                                                                                                                                       | Moderators will check for coherence of access policy url with linked Marketplace entry. (=> manually) Check that link is working (=> dashboard)                                                                                                             |
-| Activity                        | Contributors will select a term, drawn from the controlled vocabulary TaDIRAH, that describes the activities you can perform using the resource showcased in the SSH Open Marketplace Entry.                                                                                                    | Moderators will check for consistency between activity selected and the resource described. (=> manually)                                                                                                                                                   |
-|  Actors                         | An Actor is a person or an organisation who contributed in some way to the creation of the linked resource described in the SSH Open Marketplace. Name of an actor is mandatory: while creating an actor, you need at least to add a name.                                                      | Moderators will ensure the consistency of the actors database (=> dashboard): one actor should only be registered once.                                                                                                                                     |
-|                                 | Define role as one of:  contributor   author       reviewer      director      programmer   editor       provider      contact       funder       helpdesk By default, the Actor’s role is contributor. Add ExternalID for actors: ORCID, recommended.  Add ROR IDs for research organisation.  | It is recommended that the Actor(s) be identified by an externalID (esp. ORCID). Anything that can help to identify the contributor is recommended                                                                                                          |
-
-
-
-
+| Property Field's name             | How to fill in? Some recommendations for contributors                                                                                                                                                                                             | Quality checks: what and how moderators can validate content "Dashboard" = problematic items are automatically flagged and prioritised for curation within the editorial dashboard "Manually" = moderator has to assess coherence and relevance of the info |
+| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Accessible at = "Go to..." button | URL of the resource. Landing page of the resource which could be the persistent identifier. Ideally, only one URL should be added as accessibleAt. For other URLs, see "externalID".                                                              | Check that link is working (=> dashboard)                                                                                                                                                                                                                   |
+| Access Policy URL                 | URL pointing to information about the access policy that applies to the Resource. Follows EOSC Portal Providers Documentation Related to `Authentication`                                                                                         | Moderators will check for coherence of access policy url with linked Marketplace entry. (=> manually) Check that link is working (=> dashboard)                                                                                                             |
+| Activity                          | Contributors will select a term, drawn from the controlled vocabulary TaDIRAH, that describes the activities you can perform using the resource showcased in the SSH Open Marketplace Entry.                                                      | Moderators will check for consistency between activity selected and the resource described. (=> manually)                                                                                                                                                   |
+| Actors                            | An Actor is a person or an organisation who contributed in some way to the creation of the linked resource described in the SSH Open Marketplace. Name of an actor is mandatory: while creating an actor, you need at least to add a name.        | Moderators will ensure the consistency of the actors database (=> dashboard): one actor should only be registered once.                                                                                                                                     |
+|                                   | Define role as one of: contributor author reviewer director programmer editor provider contact funder helpdesk By default, the Actor's role is contributor. Add ExternalID for actors: ORCID, recommended. Add ROR IDs for research organisation. | It is recommended that the Actor(s) be identified by an externalID (esp. ORCID). Anything that can help to identify the contributor is recommended                                                                                                          |
 
 ### Vocabularies
 
-| property                   | vocabulary                                                               | type of vocabulary |
-|----------------------------|--------------------------------------------------------------------------|--------------------|
-| geographical- availability | [EOSC Geographical Availability List](https://vocabs.sshopencloud.eu/vocabularies/eosc-geographical-availability/eoscGeographicalAvailabilityScheme)                                      | closed             |
-| life-cycle-status          | [EOSC Life Cycle Status List](https://vocabs.sshopencloud.eu/vocabularies/eosc-life-cycle-status/eoscLifeCycleStatusScheme)                                              | closed             |
-| resource-category          | [EOSC Resource Category List](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/eoscResourceCategoryScheme)                                              | closed             |
-| intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                 | open               |
-| mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                         | open               |
-| language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso6393/Schema)                                                 | closed             |
-| keyword                    | Keywords from SSHOC MP                                                   | open               |
-| object-format              | Media Types from IANA                                                    | closed             |
-| discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefosdisciplines/Schema) | closed             |
-| license                    | Software License from SPDX                                               | closed             |
-| standard                   | SSK Standards List                                                       | open               |
-| activity                   | [TaDiRAH 2](https://vocabs.dariah.eu/tadirah/)                                                                | closed             |
-| publication-type           | The Bibliographic Ontology Concept Scheme                                | closed             |
+| property                   | vocabulary                                                                                                                                           | type of vocabulary |
+| -------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------ |
+| geographical- availability | [EOSC Geographical Availability List](https://vocabs.sshopencloud.eu/vocabularies/eosc-geographical-availability/eoscGeographicalAvailabilityScheme) | closed             |
+| life-cycle-status          | [EOSC Life Cycle Status List](https://vocabs.sshopencloud.eu/vocabularies/eosc-life-cycle-status/eoscLifeCycleStatusScheme)                          | closed             |
+| resource-category          | [EOSC Resource Category List](https://vocabs.sshopencloud.eu/vocabularies/eosc-resource-category/eoscResourceCategoryScheme)                         | closed             |
+| intended-audience          | [audience](https://vocabs.sshopencloud.eu/vocabularies/sshoc-audience/audienceScheme)                                                                | open               |
+| mode-of-use                | [Invocation types](https://vocabs.sshopencloud.eu/vocabularies/invocation-type/invocationTypeScheme)                                                 | open               |
+| language                   | [ISO 639-3 Language Codes](https://vocabs.acdh.oeaw.ac.at/iso6393/Schema)                                                                            | closed             |
+| keyword                    | Keywords from SSHOC MP                                                                                                                               | open               |
+| object-format              | Media Types from IANA                                                                                                                                | closed             |
+| discipline                 | [ÖFOS 2012. Austrian Fields of Science and Technology Classification 2012](https://vocabs.acdh.oeaw.ac.at/oefosdisciplines/Schema)                   | closed             |
+| license                    | Software License from SPDX                                                                                                                           | closed             |
+| standard                   | SSK Standards List                                                                                                                                   | open               |
+| activity                   | [TaDiRAH 2](https://vocabs.dariah.eu/tadirah/)                                                                                                       | closed             |
+| publication-type           | The Bibliographic Ontology Concept Scheme                                                                                                            | closed             |
